2012-09-27  Joel Brobecker  <brobecker@adacore.com>

	* sol-thread.c (ps_lgetxregsize, ps_lgetxregs, ps_lsetxregs):
	Enable this code for sparc hosts only.

2012-09-27  Joel Brobecker  <brobecker@adacore.com>

	* procfs.h (procfs_find_LDT_entry): Add declaration.
	* sol-thread.c (ps_lgetLDT): Delete local declaration of
	function procfs_find_LDT_entry.

2012-09-27  Joel Brobecker  <brobecker@adacore.com>

	* procfs.c (proc_get_LDT_entry): Make static.

2012-09-27  Joel Brobecker  <brobecker@adacore.com>

	* procfs.c (proc_find_memory_regions): Fix declaration.

2012-09-27  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* amd64-tdep.c (amd64_return_value): Revert previous change
	that used TYPE_LENGTH directly.
	* bfin-tdep.c (bfin_extract_return_value): Likewise.
	(bfin_store_return_value): Likewise.
	* cris-tdep.c (cris_store_return_value): Likewise.
	(cris_extract_return_value): Likewise.
	* h8300-tdep.c (h8300_extract_return_value): Likewise.
	* hppa-tdep.c (hppa64_return_value): Likewise.
	* lm32-tdep.c (lm32_store_return_value): Likewise.
	* microblaze-tdep.c (microblaze_store_return_value): Likewise.
	* spu-tdep.c (spu_value_from_register): Likewise.
	* vax-tdep.c (vax_return_value): Likewise.

2012-09-27  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* gdbtypes.c (lookup_array_range_type): Expand parameters
	LOW_BOUND and HIGH_BOUND to LONGEST.
	(lookup_string_range_type): Likewise.
	* gdbtypes.h (lookup_array_range_type): Likewise.
	(lookup_string_range_type): Likewise.
	* valops.c (value_cstring): Expand parameter LEN to ssize_t.
	Expand HIGHBOUND to ssize_t.
	(value_string): Likewise.
	* value.h (value_cstring): Expand parameter LEN to ssize_t.
	(value_string): Likewise.

2012-09-27  Yao Qi  <yao@codesourcery.com>

	PR breakpoints/13898
	* breakpoint.h (tracepoint_breakpoint_ops): Forward declaration.
	* mi/mi-cmd-break.c (mi_cmd_break_insert): Set breakpoint_ops
	per breakpoint type.

2012-09-26  Pierre Muller  <muller@ics.u-strasbg.fr>
